--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,50 @@
 version: "3"
 
 services:
-  backend:
+  backend-base: &backend-base
     build:
       context: ./
       dockerfile: Dockerfile-go
     image: cryptochain-go:1.0
-    container_name: cryptochain-server
     command: "air -c .air.toml"
+    volumes:
+      - .:/app
+    networks:
+      - cryptochain
+  backend-1:
+    <<: *backend-base
+    container_name: cryptochain-server-1
     expose:
       - "8080"
     ports:
       - "8080:8080"
-    volumes:
-      - .:/app
     environment:
       EXEC_MODE: "docker"
+      SERVER_PORT: 8080
+  backend-2:
+    <<: *backend-base
+    container_name: cryptochain-server-2
+    depends_on:
+      - backend-1
+    expose:
+      - "8081"
+    ports:
+      - "8081:8081"
+    environment:
+      EXEC_MODE: "docker"
+      SERVER_PORT: 8081
+  redis:
+    build:
+      context: ./
+      dockerfile: Dockerfile-redis
+    image: cryptochain-redis:1.0
+    container_name: cryptochain-redis
+    volumes:
+      - ./redis/data:/data
+    expose:
+      - "6379"
+    ports:
+      - "6379:6379"
     networks:
       - cryptochain
 
