--- a/configs/configs.yaml
+++ b/configs/configs.yaml
@@ -1,6 +1,7 @@
 env: develop
-host: 0.0.0.0:8080
+host: http://backend-1:8080
 server:
+  defaultPort: 8080
   port: 8080
   corsOrigins: "http://localhost:5173,http://localhost:8080,https://localhost:3443"
 redis:
