--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,6 +31,7 @@ services:
     ports:
       - "8081:8081"
     environment:
+      HOST: http://backend-1:8080
       EXEC_MODE: "docker"
       SERVER_PORT: 8081
   redis:
